# DieAudit

./: .dockerignore  .env.example  .env.production.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
configs/: model-providers.yaml  nginx.conf
docs/: architecture.md  production-readiness.md
scripts/: bootstrap.ps1  bootstrap.sh  create-api-key.ps1  create-api-key.sh  e2e-smoke.ps1  e2e-smoke.sh  pull-tool-images.ps1  pull-tool-images.sh
services/platform-common/: pyproject.toml
services/platform-common/dieaudit_common/: settings.py
services/platform-common/dieaudit_common/domain/: enums.py  events.py  models.py
services/platform-common/dieaudit_common/events/: nats.py
services/platform-common/dieaudit_common/persistence/: base.py
services/platform-common/dieaudit_common/persistence/repositories/: __init__.py  core.py
services/platform-common/dieaudit_common/schemas/: bff.py  pipeline.py
services/platform-common/dieaudit_common/security/: api_keys.py
tests/: conftest.py  test_agent_output.py  test_api_key_bootstrap.py  test_artifacts.py  test_backend_api_structure.py  test_code_analysis.py  test_compose_config.py  test_decompiler_and_graph_indexing.py  test_demo_isolation.py  test_dependency_records.py  test_dependency_scanner.py  test_e2e_smoke_scripts.py  test_execution_graph.py  test_finding_dedupe.py  test_http_guards.py  test_kimi_code_support.py  test_knowledge_service.py  test_observability_config.py  test_opencode_acp_runner.py  (+27 more)
(+309 files in other folders)
